wk_taa_taaqa/src/objects/Line_Item_Promotion__c.object
<CustomObject>
    <fields>
        <fullName>Line_ItemId__c</fullName>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Line Item Promotions</relationshipLabel>
        <relationshipName>Line_Item_Promotions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <description>Promo code of the promotion</description>
        <label>Promo Code</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Name__c</fullName>
        <description>Promo name of the promotion</description>
        <label>Promo Name</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo__c</fullName>
        <label>Promo %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Line Item Promotion</label>
    <nameField>
        <displayFormat>LP-{0000}</displayFormat>
        <label>Line Item Promotions</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Item Promotions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>